--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
   font-family: Arial, Helvetica, sans-serif;
   margin: 0px;
   padding: 0px;
-  color: #fff;
 }
 body {
   backdrop-filter: blur(10px);; 
@@ -15,6 +14,7 @@ body {
   background-color: #ffffff20;
   margin:0.5rem;
   border-radius: 0px 0px 5px 5px;
+  color: #fff
 }
 .post-title {
   background-color: #fff;
@@ -57,12 +57,7 @@ body {
   padding: 0rem 0.5rem 0.5rem 2rem;
   font-size:15px;
 }
-input {
-  background-color:#000;
-  border:none;
-  padding:0.5rem;
-  margin:0.5rem;
-}
+
 .newComment{
   display:flex;
   justify-content: center;
@@ -70,7 +65,8 @@ input {
   border-top:1px solid #fff;
 }
 .newPost{
-  background-color: #fff;
+  background-color: #ffffff50;
+  color: #fff;
   margin:0.5rem;
   border-radius: 5px;
   display:flex;
@@ -92,9 +88,52 @@ input {
   background-color: #fff;
   border-radius:5px;
 }
+.active {
+  color: #e62e1b;
+  background-color: #fff;
+}
+input {
+  background-color:#000;
+  border:none;
+  padding:0.5rem;
+  margin:0.5rem;
+}
+textarea {
+  color: #fff;
+  background-color: #000;
+  margin: 0rem 0.5rem;
+  padding: 0.5rem;
+}
+input[type=text] {
+  color: #fff;
+  padding: 0.5rem;
+}
+
+input[type=submit] {
+  color: #fff;
+}
+
+label {
+  background-color: #fff;
+  color: #000;
+  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+  font-size: 23px;
+  border-radius: 5px 5px 0px 0px;
+}
 @media (min-width: 900px) {
   body {
     padding: 30px 130px;
   }
-  
+  .post-footer:hover {
+    cursor: pointer;
+    color:#e62e1b;
+    background-color: #fff;
+    transition: color 0.5s, background-color 0.5s ;
+  }
+  input[type=submit]:hover {
+    transition: color 0.5s, background-color 0.5s ;
+    color: #000;
+    cursor:pointer;
+    background-color: #fff;
+  }
 }
