--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   background-image: url('https://images.pexels.com/photos/396547/pexels-photo-396547.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500')}
 
 .hide {display:none}
+
 .post {
   display:flex;
   flex-direction: column;
@@ -64,13 +65,21 @@ body {
   background-color:#ffffff20;
   border-top:1px solid #fff;
 }
-.newPost{
+
+.newComment input[type=text]{
+  margin: 0.5rem;
+  width: 100%;
+}
+.newComment input[type=submit]{
+  margin: 0.5rem 0.5rem 0.5rem 0rem ;
+}
+
+.newPostC {
   background-color: #ffffff50;
   color: #fff;
-  margin:0.5rem;
-  border-radius: 5px;
-  display:flex;
+  display: flex;
   flex-direction: column;
+  border-radius: 0px 0px 5px 5px;
 }
 .pagination{
   background-color: #fff;
@@ -80,7 +89,7 @@ body {
   flex-wrap:wrap;
 }
 .pagination button {
-  min-width:20px;
+  min-width:30px;
   padding:0.1rem;
   margin:0.1rem 0.1rem;
   color: #000;
@@ -103,6 +112,7 @@ textarea {
   background-color: #000;
   margin: 0rem 0.5rem;
   padding: 0.5rem;
+  resize: none;
 }
 input[type=text] {
   color: #fff;
@@ -112,17 +122,24 @@ input[type=text] {
 input[type=submit] {
   color: #fff;
 }
-
-label {
+.newPost {
+  margin: 1rem 0.5rem;
+  display: flex;
+  flex-direction: column;
+}
+.newPost label {
   background-color: #fff;
   color: #000;
-  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+  text-align: center;
+  padding: 0.5rem;
   font-size: 23px;
   border-radius: 5px 5px 0px 0px;
 }
 @media (min-width: 900px) {
   body {
     padding: 30px 130px;
+    max-width: 1200px;
+    margin:auto
   }
   .post-footer:hover {
     cursor: pointer;
@@ -135,5 +152,15 @@ label {
     color: #000;
     cursor:pointer;
     background-color: #fff;
+  }
+  .post-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+  }
+  .post {
+    height: fit-content;
+  }
+  .newPostC {
+    padding: 0rem 10rem;
   }
 }
