--- a/style.css
+++ b/style.css
@@ -199,8 +199,8 @@ padding: 0.5rem;
    padding: 1rem 30%;
   }
   .pagination button:hover {
-    background-color: #fafafa;
-    color:#0e0e0e;
+    background-color: #0e0e0e;
+    color:#fafafa;
     cursor: pointer;
   }
   .goBack:hover{
